# loserCE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/inc/: Engine.h  chessMove.h  chessmanClass.h  chessmanSearch.h  chessmanSide.h  chessmanType.h  emplacement.h  emplacementTree.h
Engine/src/: chessMove.cpp  chessmanClass.cpp  emplacement.cpp
Engine/test/: emplacement_test.cpp
cpp-tutorial/stage1/: bazel-bin  bazel-out  bazel-stage1  bazel-testlogs
cpp-tutorial/stage3/: bazel-bin  bazel-out  bazel-stage3  bazel-testlogs
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/source/: index.rst  uci.rst
engine/: CMakeLists.txt
engine/inc/: chessmanClass.h  chessmanType.h  emplacement.h  emplacementNode.h  engine.h
engine/src/: chessMove.cpp  chessmanClass.cpp  emplacement.cpp
engine/test/: chessmanPawn_test.cpp  emplacement_test.cpp
interfaces/: CMakeLists.txt
interfaces/config/: UCILexer.g4  UCIParser.g4
interfaces/inc/: inOutInterface.h  iocmd.h  iocmd_uci.h  queueTs.h  stdInOut.h  uci.h
interfaces/src/: stdInOut.cpp  uci.cpp
interfaces/test/: protocollInterface_test.cpp  uci_test.cpp
log/: CMakeLists.txt
log/inc/: log.h
log/src/: log.cpp
log/test/: log_test.cpp
loserCE/inc/: Types.h
loserCE/src/: loserCE.cpp
template/: Bazel  CMakeLists.txt
